# smart-match

./: .gitignore  Dockerfile  Makefile  README.md  diagnose_pipeline.py  docker-compose.yml  pyproject.toml  requirements.txt  run_sanity.py  test_api.sh
app/: main.py
app/api/: __init__.py
app/api/routes/: extract.py  health.py  results.py
app/core/: config.py  logging.py
app/schemas/: birth.py  common.py  death.py  marriage.py
app/services/: entity_resolution.py  extraction.py  layout.py  light_preprocess.py  llm_extraction.py  ocr.py  postprocessing.py  region_preprocess.py
app/utils/: file_utils.py
configs/: config.dev.yml  config.prod.yml  config.staging.yml  config.yml
tests/: compare_preprocessing.py  conftest.py  run_all_tests.py  test_entity_resolution.py  test_extraction.py  test_layout.py  test_light_preprocess.py  test_llm_extraction.py  test_ocr.py  test_region_preprocess.py  visualize_pipeline.py
